# QJAKA_GUI

./: .clang-format  .gitignore  CMakeLists.txt  IPEdit.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  package.xml  robot.hpp
config/: jaka_gui.rviz
doc/: JakaConfig.cmake
launch/: jaka_gui.launch  test_gui.launch  test_trajectory.launch
src/: IPEdit.cpp  README.md  main.cpp  mainwindow.cpp  mainwindow.h  robot.hpp  robot_manager.hpp  subwindow.cpp  subwindow.h  subwindow.ui  tools.hpp
srv/: DigitalOutputService.srv  DualRobotJointMoveService.srv  GraspService.srv  JointMoveService.srv
urdf/: jaka_dual.xacro
